feat: edit user name

--- a/todo.txt
+++ b/todo.txt
@@ -15,6 +15,8 @@
 - New user register listing not loaded?
 - Deleting main image submits edit listing (lol wth)
 
-
 # TMP My TODO
 - Fix the multiple rendering for the home page
+- Resolve Image
+- Notify on resolve
+- Filter out resolve in listing and map
